BLOCKCHAIN-591 Remove infinite loader + fix z-index on unobtrusive bar

--- a/src/index.scss
+++ b/src/index.scss
@@ -50,7 +50,7 @@ body {
     left: 0;
     position: fixed;
     height: 5px;
-    z-index: 999;
+    z-index: 1001;
     transition: all 0.3s;
   }
 
@@ -59,6 +59,7 @@ body {
     .ant-progress-outer,
     .ant-progress-inner {
       height: 3px;
+      z-index: 999;
     } 
   }
 }
